tests/snapshots/run_wpt_conformance__litert_logicalXor_uint8_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_xor.https.any.js",
    "logicalXor uint8 3D tensors",
    "litert",
    "PASS",
)
