tests/snapshots/run_wpt_conformance__litert_logicalXor_uint8_5D_inputs_with_alternating_broadcast_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
logical_xor.https.any.js logicalXor uint8 5D inputs with alternating broadcast axes, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: LogicalXor { a: 0, b: 1, options: Some(MLOperatorOptions { label: "" }), outputs: [2] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u8[2, 1, 2, 1, 2];
    inputB: u8[1, 2, 1, 2, 1];
  }

  nodes {
    [output] = logicalXor(inputA, inputB, label="");
  }

  outputs { output; }
}
